# better_cz

./: main.py  pyproject.toml
better_cz/: commit_prompt.py  cz.py
