[tool.poetry]
name = "better_cz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
questionary = "^2.0.1"
prompt-toolkit = "3.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
